force-app/main/default/objects/How_To__kav/fields/Additional_Note__c.field-meta.xml
<CustomField>
    <fullName>Additional_Note__c</fullName>
    <label>Additional Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>