force-app/main/default/objects/How_To__kav/fields/Article_Author__c.field-meta.xml
<CustomField>
    <fullName>Article_Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article Author</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge_Base</relationshipName>
    <type>Lookup</type>
</CustomField>