force-app/main/default/objects/How_To__kav/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Knowledge Base</relationshipLabel>
    <relationshipName>Knowledge_Base</relationshipName>
    <type>Lookup</type>
</CustomField>