force-app/main/default/objects/How_To__kav/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>