force-app/main/default/objects/How_To__kav/fields/Change_Log__c.field-meta.xml
<CustomField>
    <fullName>Change_Log__c</fullName>
    <description>[CS-6] : Field to capture the updates made to the article</description>
    <inlineHelpText>Please mention any updates made to any of these fields : Summary/Environment/Cause/Resolution/Internal Comments on the article</inlineHelpText>
    <label>Change Log</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>