force-app/main/default/objects/How_To__kav/fields/Creator_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Creator_Manager_Name__c</fullName>
    <formula>CreatedBy.Manager.FirstName +  CreatedBy.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Manager Name</label>
    <type>Text</type>
</CustomField>