force-app/main/default/objects/How_To__kav/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>