force-app/main/default/objects/How_To__kav/fields/Internal_comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_comments__c</fullName>
    <description>These internal comments are not visible to users in the Support Portal (i.e., Community Users). Only the Rubrik Customer Support User and Administrator profiles have access to this internal comment field.</description>
    <inlineHelpText>These internal comments are not visible to users in the Support Portal (i.e., Community Users). Only the Rubrik Customer Support User and Administrator profiles have access to this internal comment field.</inlineHelpText>
    <label>Internal comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>