force-app/main/default/objects/How_To__kav/fields/is_Owned_By_Me__c.field-meta.xml
<CustomField>
    <fullName>is_Owned_By_Me__c</fullName>
    <formula>IF(IF(ISPICKVAL(PublishStatus,&apos;Draft&apos;), AssignedToId  == $User.Id , CreatedById == $User.Id ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Owned By Me</label>
    <type>Checkbox</type>
</CustomField>