force-app/main/default/objects/How_To__kav/fields/JIRA_Reference__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Reference__c</fullName>
    <label>JIRA Reference</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>