force-app/main/default/objects/How_To__kav/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <label>Keyword</label>
    <length>250</length>
    <type>Text</type>
</CustomField>