force-app/main/default/objects/How_To__kav/fields/Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_URL__c</fullName>
    <formula>IF( (ISPICKVAL(  PublishStatus , &quot;Published&quot;) &amp;&amp; ( IsVisibleInCsp = True)) ,  HYPERLINK(&quot;https://support.rubrik.com/s/article/&quot; + UrlName , &quot;https://support.rubrik.com/s/article/&quot; + UrlName), Null)</formula>
    <label>Portal URL</label>
    <type>Text</type>
</CustomField>