force-app/main/default/objects/How_To__kav/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <label>Problem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>