force-app/main/default/objects/How_To__kav/fields/Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Software_Version__c</fullName>
    <label>Software Version</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Software_Versions</valueSetName>
    </valueSet>
</CustomField>