force-app/main/default/objects/How_To__kav/fields/Software_Versions__c.field-meta.xml
<CustomField>
    <fullName>Software_Versions__c</fullName>
    <label>Software Versions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5.1.0-EA1-6478</fullName>
            </value>
            <value>
                <fullName>5.0.1-p1-1342</fullName>
            </value>
            <value>
                <fullName>Polaris 1.0</fullName>
            </value>
            <value>
                <fullName>5.0.1-1280</fullName>
            </value>
            <value>
                <fullName>5.0.0-p2-1122</fullName>
            </value>
            <value>
                <fullName>5.0.0-p2-1122 (Edge Trial)</fullName>
            </value>
            <value>
                <fullName>5.0.0-p1-827</fullName>
            </value>
            <value>
                <fullName>5.0.0-p1-827 (Edge Trial)</fullName>
            </value>
            <value>
                <fullName>5.0.0-817</fullName>
            </value>
            <value>
                <fullName>5.0.0-DA2-784</fullName>
            </value>
            <value>
                <fullName>5.0.0-DA1-583</fullName>
            </value>
            <value>
                <fullName>5.0.0-EA3-353</fullName>
            </value>
            <value>
                <fullName>5.0.0-EA2-266</fullName>
            </value>
            <value>
                <fullName>5.0.0-EA1-143</fullName>
            </value>
            <value>
                <fullName>4.2.2-p1-1745</fullName>
            </value>
            <value>
                <fullName>4.2.2-1411 (CloudOn)</fullName>
            </value>
            <value>
                <fullName>4.2.2-1699</fullName>
            </value>
            <value>
                <fullName>4.2.1-p4-1526</fullName>
            </value>
            <value>
                <fullName>4.2.1-p3-1523</fullName>
            </value>
            <value>
                <fullName>4.2.1-p2-1467</fullName>
            </value>
            <value>
                <fullName>4.2.1-p1-1454</fullName>
            </value>
            <value>
                <fullName>4.2.1-1417</fullName>
            </value>
            <value>
                <fullName>4.2.1-1405</fullName>
            </value>
            <value>
                <fullName>4.2.0-p5-1383</fullName>
            </value>
            <value>
                <fullName>4.2.0-p5-1383 (Edge Trial)</fullName>
            </value>
            <value>
                <fullName>4.2.0-p4-1220</fullName>
            </value>
            <value>
                <fullName>4.2.0-p2-1102</fullName>
            </value>
            <value>
                <fullName>4.2.0-p1-1088</fullName>
            </value>
            <value>
                <fullName>4.2.0-1070</fullName>
            </value>
            <value>
                <fullName>4.2.0-DA1-910</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>