force-app/main/default/objects/How_To__kav/fields/Solution_Detail__c.field-meta.xml
<CustomField>
    <fullName>Solution_Detail__c</fullName>
    <label>Solution Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>