force-app/main/default/objects/How_To__kav/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Work-in-Progress (WIP)</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Not Validated</fullName>
                <isActive>false</isActive>
                <label>Not Validated</label>
            </value>
            <value>
                <fullName>Validated (External)</fullName>
                <isActive>false</isActive>
                <label>Validated (External)</label>
            </value>
            <value>
                <fullName>Validated (Internal)</fullName>
                <isActive>false</isActive>
                <label>Validated (Internal)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>