force-app/main/default/objects/How_To__kav/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>