force-app/main/default/objects/How_To__kav/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <label>Video URL</label>
    <type>Url</type>
</CustomField>