force-app/main/default/objects/How_To__kav/validationRules/Input_Change_Log.validationRule-meta.xml
<ValidationRule>
    <fullName>Input_Change_Log</fullName>
    <active>true</active>
    <description>[CS-6] : Users to enter what changes were made to the article</description>
    <errorConditionFormula>IF(
AND(NOT(ISNEW()),NOT(ISCHANGED(Change_Log__c)), OR(
ISCHANGED(Summary__c),ISCHANGED(Environment__c),ISCHANGED(Cause__c),ISCHANGED(Resolution__c),ISCHANGED(Internal_comments__c)
))
,true
,false)</errorConditionFormula>
    <errorMessage>Required field : Change Log - Please mention the updates made to the article in Change Log!</errorMessage>
</ValidationRule>